SERVER-57660 Fail time-series inserts if buckets collection does not exist

(cherry picked from commit e3dbc111bf3e3167346aa20f9b9558b8b7c70303)